--- a/style/global.css
+++ b/style/global.css
@@ -5,13 +5,18 @@
 }
 
 :root{
-    --band-color:#EF5F4C;
+    --brand-color:#EF5F4C;
     --background-color:#FFFFFF;
     --surface-color:#F5F5F5;
     --skeleton-color:#D9D9D9;
-    --shape-transparent: #FFFFFF;
+    --shape-transparent: #ffffff98;
     
     --text-color-primary:#313131;
-    --text-color-primary: #6C6C6C;
+    --text-color-secundary: #6C6C6C;
    
+}
+
+body{
+    color: var(--text-color-secundary);
+    background-color: var(--background-color);
 }
