--- a/style/global.css
+++ b/style/global.css
@@ -13,10 +13,18 @@
     
     --text-color-primary:#313131;
     --text-color-secundary: #6C6C6C;
+
+    --font-family: "Poppins", serif;
+    --text-lg: bold 32px/125% var(--font-family);
+    --text:  16px/150% var(--font-family);
+    --text-md: 14px/170%  var(--font-family);
+    --text-sm: 12px/170% var(--font-family);
    
 }
 
 body{
+
+
     color: var(--text-color-secundary);
     background-color: var(--background-color);
 }
